Update social sharing image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
   <link rel="manifest" href="/site.webmanifest?v=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>app</title>
+  <title>Amber Spirits</title>
+  <meta name="description"
+    content="Discover Amber Spirits - crafting premium whiskies and brandies like Amber Horse, Hyderabad Blue, and Grape House from the heart of India.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://amberspiritsindia.com/">
+  <meta property="og:title" content="Amber Spirits - Premium Indian Whiskies & Brandies">
+  <meta property="og:description"
+    content="Discover Amber Spirits - crafting premium whiskies and brandies like Amber Horse, Hyderabad Blue, and Grape House from the heart of India.">
+  <meta property="og:image" content="/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://amberspiritsindia.com/">
+  <meta property="twitter:title" content="Amber Spirits - Premium Indian Whiskies & Brandies">
+  <meta property="twitter:description"
+    content="Discover Amber Spirits - crafting premium whiskies and brandies like Amber Horse, Hyderabad Blue, and Grape House from the heart of India.">
+  <meta property="twitter:image" content="/og-image.png">
 </head>
 
 <body>
